href link change

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <div class="media-body">
                 <h3 class="mt-0 text-black">Manpower</h3>
                 <p></p>
-                <p><a href="services.html" class="btn btn-outline-primary btn-sm">Learn More</a></p>
+                <p><a href="manpower.html" class="btn btn-outline-primary btn-sm">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
               <div class="media-body">
                 <h3 class="mt-0 text-black">Equipment</h3>
                 <p></p>
-                <p><a href="services.html" class="btn btn-outline-primary btn-sm">Learn More</a></p>
+                <p><a href="equipments.html" class="btn btn-outline-primary btn-sm">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5 element-animate">
           <div class="col-md-8 text-center">
-            <h2 class="text-uppercase heading border-bottom mb-4">Our Partners</h2>
+            <h2 class="text-uppercase heading border-bottom mb-4">Our Clients</h2>
           </div>
         </div>
         <div class="row no-gutters">
